<resources>
    <string name="app_name">Unit Converter</string>

    <string-array name="length_units_array">
        <item>Inch</item>
        <item>Foot</item>
        <item>Yard</item>
        <item>Mile</item>
        <item>Centimeter</item>
        <item>Meter</item>
        <item>Kilometer</item>
    </string-array>

    <string-array name="weight_units_array">
        <item>Pound</item>
        <item>Ounce</item>
        <item>Ton</item>
        <item>Kilogram</item>
        <item>Gram</item>
    </string-array>

    <string-array name="temperature_units_array">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>

    <string-array name="conversion_types_array">
        <item>Length</item>
        <item>Weight</item>
        <item>Temperature</item>
    </string-array>

    <string name="conversion_type">Conversion Type</string>
    <string name="select_source_unit">Select source unit</string>
    <string name="select_destination_unit">Select destination unit</string>
    <string name="enter_value">Enter value</string>
    <string name="convert_button">Convert</string>
    <string name="result_text">Result</string>
</resources>
